--- a/RASD/Section/Introduction.tex
+++ b/RASD/Section/Introduction.tex
@@ -1,38 +1,104 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2757
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+\section{Introduction}\label{intro}
+\subsection{Purpose}
+In the context of education and development in the field of programming, students often face a series of challenges. The process of improving software development skills, both for beginners and more experienced students, requires a rigorous and structured approach.\newline
 
-\f0\fs24 \cf0 \\section\{Introduction\}\\label\{intro\}\
-\\subsection\{Purpose\}\
-In the context of education and development in the field of programming, students often face a series of challenges. The process of improving software development skills, both for beginners and more experienced students, requires a rigorous and structured approach.\\newline\
-\
-\\noindent The traditional method of learning based on theoretical lessons and assigned tasks can sometimes be limited in its effectiveness, as students may not have the opportunity to concretely apply what they have learned. Theory and practice must be integrated synergistically to ensure significant growth in software development skills.\
-\\newline\
-\
-\\noindent CodeKataBattle (CKB) is an innovative response to these challenges in software learning and development. The CKB platform represents a revolutionary solution for students eager to enhance their programming skills. CKB is designed to transform the learning process into a collaborative and practical experience.\
-\\newline\
-\
-\\noindent Thanks to CKB, students have the opportunity to engage in real code battles, solving programming exercises and overcoming a series of specific tests. These battles allow students to apply the theoretical knowledge they have acquired, putting into practice what they have learned through a series of specific challenges.\
-\\newline\
-\
-\\noindent This document represents the RASD for the CodeKataBattle (CKB) system, providing a description focused on the system's requirements and specifications. It illustrates scenarios and use cases to detail the system's features, interactions with interested actors, and the limitations it is subject to.\
-\
-\\subsubsection\{Goal\}\
-The system is characterized by the following goals:\
-\\begin\{table\}[H]\
-    \\begin\{tabularx\}\{\\textwidth\}\{cX\}\
-        \\toprule\
-        \\textbf\{G1\} & Educators create coding tournaments and battles              \\\\\
-        \\textbf\{G2\} & Students register on the platform                           \\\\\
-        \\textbf\{G3\} & Students form teams for coding battles  \\\\\
-        \\textbf\{G4\} & Students participate in coding battles    \\\\\
-        \\textbf\{G5\} & Students are notified about battles and tournaments \\\\\
-        \\textbf\{G6\} & Projects can be partially evaluated by educators \\\\\
-        \\textbf\{G7\} & Projects are partially evaluated in an automated way based on functional aspects, timeliness, and quality level of the sources  \\\\\
-        \\textbf\{G8\} & Educators and students can see the rank of the battles and tournaments \\\\\
-        \\\\ \\bottomrule\
-    \\end\{tabularx\}\
-\\end\{table\}}
+\noindent The traditional method of learning based on theoretical lessons and assigned tasks can sometimes be limited in its effectiveness, as students may not have the opportunity to concretely apply what they have learned. Theory and practice must be integrated synergistically to ensure significant growth in software development skills.
+\newline
+
+\noindent CodeKataBattle (CKB) is an innovative response to these challenges in software learning and development. The CKB platform represents a revolutionary solution for students eager to enhance their programming skills. CKB is designed to transform the learning process into a collaborative and practical experience.
+\newline
+
+\noindent Thanks to CKB, students have the opportunity to engage in real code battles, solving programming exercises and overcoming a series of specific tests. These battles allow students to apply the theoretical knowledge they have acquired, putting into practice what they have learned through a series of specific challenges.
+\newline
+
+\noindent This document represents the RASD for the CodeKataBattle (CKB) system, providing a description focused on the system's requirements and specifications. It illustrates scenarios and use cases to detail the system's features, interactions with interested actors, and the limitations it is subject to.
+
+\subsubsection{Goal}
+The system is characterized by the following goals:
+\begin{table}[H]
+    \begin{tabularx}{\textwidth}{cX}
+        \toprule
+        \textbf{G1} & Educators can create coding tournaments and battles              \\
+        \textbf{G2} & Students can form teams for coding battles  \\
+        \textbf{G3} & Students can participate in coding battles    \\
+        \textbf{G4} & Students are notified about battles and tournaments \\
+        \textbf{G5} & Educators are able to evaluate manually the projects of the student\\
+        \textbf{G6} & Projects are  evaluated in an automated way based on functional aspects, timeliness, and quality level of the sources  \\
+        \textbf{G7} & Educators and students can see the rank of the battles and tournaments \\
+        \\ \bottomrule
+    \end{tabularx}
+\end{table}
+
+
+\subsection{Scope}
+The main human actors in this system are students and educators. Educators use this platform to challenge students by creating competitions where groups of students compete against each other, demonstrating and improving their skills. The challenges consist of a programming exercise in a chosen language (such as Java or Python). Students must follow a "test-first" \footnote{Test-first: The "test-first" approach involves writing tests before implementing the code, promoting test-driven development.}approach, writing code to pass provided tests.
+
+\noindent There is also a non-human actor that plays a crucial role in the platform : Github. GitHub plays a central role in the CodeKataBattle (CKB) for hosting battles and facilitating collaboration among students. It enables automated evaluations through GitHub Actions, tracking teams' progress and updating battle scores in real-time. 
+
+\noindent Here's how the system works: a teacher creates a "battle" following specific steps. They upload the problem description and the project to CKB, set the minimum and maximum number of students per group, define deadlines for registration and project submission, and set evaluation criteria. Once enrolled in a "battle," students form teams and start working on the project. The platform integrates GitHub, a source code management service, to facilitate collaboration.
+
+\noindent Whenever students upload a new version of their code, the platform automatically calculates the team's score, considering aspects such as the number of passed tests, timeliness of submissions, and code quality. The automated assessment also includes static code analysis to evaluate aspects like security, reliability, and maintainability. Teachers can assign personal scores based on students' performance.
+
+\noindent At the end of each "battle," the platform updates scores and displays the updated ranking. Students and teachers can monitor progress during the challenge. After the final submission deadline, a consolidation phase takes place, which may involve manual assessment by teachers. Once this phase is complete, all involved students are notified of the final "battle" ranking.
+
+\noindent Scores obtained in each "battle" contribute to the overall tournament score for each student. These scores are used to create an overall tournament ranking, showcasing students' performance compared to their peers.
+
+\subsubsection{World phenomena}
+\begin{table}[H]
+    \begin{tabularx}{\textwidth}{cX}
+        \toprule
+        \textbf{WP1} & Educators evaluate the projects        \\
+        \textbf{WP2} & Students solve the challenges  
+        \\ \bottomrule
+    \end{tabularx}
+\end{table}
+
+\subsubsection{Shared phenomena}
+\begin{table}[H]
+    \centering
+    \begin{tabularx}{\textwidth}{c|X|c}
+        \toprule
+        ID            &                                                                                                                                                                       & Controlled by \\ \midrule
+        \textbf{SP1}  & Students invite other students to join their group                                                                                                            & world         \\ \midrule
+        \textbf{SP2}  & Students push a new commit into the main branch of their repository                                                                                                                 & world         \\ \midrule
+        \textbf{SP3}  & Students can view the battle rank                                                                                                                      & world         \\ \midrule
+        \textbf{SP4}  & Students can view the tournament rank                                                                                                                      & world         \\ \midrule
+        \textbf{SP5}  & The educator uploads the battle                                                                                           & world       \\ \midrule
+        \textbf{SP6}  & Students register for the battle                                                                                                                                      & world         \\ \midrule
+        \textbf{SP7}  & Students fork GitHub repository  & world       \\ \midrule
+
+        \textbf{SP8} & Educator close the tournament                                                                                                                             & world         \\ \midrule     
+        \textbf{SP9}  & The professor sets the minimum and maximum number of students per group                                                                                             & world       \\ \midrule
+         \textbf{SP10}  & The professor sets a registration deadline                                                                                                           & world         \\ \midrule
+         \textbf{SP11}  & The professor sets a final submission deadline                                                                                            & world         \\ \midrule
+         \textbf{SP12}  & The professor configures additional scoring parameters                                                                                   & world         \\ \midrule
+        \textbf{SP13}  & Educator use the CKB platform to see the sources produced by each team                                                                                                                & world         \\ \midrule
+          \textbf{SP14}  & Students receive the challenge                                                                                 & machine       \\ \midrule
+        \textbf{SP15} & System notify user  about tournament creation                                                                                          & machine       \\ \midrule
+        \textbf{SP16} & System notify user about the final battle rank                                                                                                                             & machine       \\ \midrule
+        \textbf{SP17} & System notify user about the creation of a new battle                                                                                                                            & machine        
+                                                                                                                \\ \bottomrule
+    \end{tabularx}
+\end{table}
+
+\subsection{Definitions, Acronyms, Abbreviations}
+
+\subsubsection{Definitions}
+\begin{itemize}
+    \item GitHub - GitHub is a web platform that provides developers with a space to host and collaborate on software projects, manage source code, and facilitate the review and integration of changes.
+    \item Fork - A fork on GitHub is the creation of an independent copy of an existing repository, allowing developers to make changes without directly affecting the main project.
+    \item GitHub Repository - GitHub repository is an online storage space for a software project, including files, documentation, and version history, facilitating collaboration among developers and code management.
+    \item Commit - A commit is the act of recording changes made to files in a repository, confirming them in the Git version control system, and providing a descriptive message that traces the history of the changes.
+\end{itemize}
+\subsubsection{Acronyms}
+\begin{itemize}
+    \item CKB - Code Kada Battle.
+    \item RASD - Requirement Analysis and Specification Document. 
+    \item UI - User interface. 
+    \item UML - Unified Modelling Language.
+\end{itemize}
+\subsubsection{Abbreviations}
+\begin{itemize}
+    \item WP - World Phenomena.
+    \item SP - Shared Phenomena.
+\end{itemize}
