Start Second Chapter

--- a/RASD/Section/Introduction.tex
+++ b/RASD/Section/Introduction.tex
@@ -102,3 +102,25 @@ The main human actors in this system are students and educators. Educators use t
     \item WP - World Phenomena.
     \item SP - Shared Phenomena.
 \end{itemize}
+
+\subsection{Revision history}
+
+
+
+\subsection{Reference Documents}
+The creation of this document is based on :
+\begin{itemize}
+    \item Slides of Software Engineering 2 course
+\end{itemize}
+
+
+\subsection{Document Structure}
+This document is composed of six sections:
+\begin{enumerate}
+    \item \textbf{Introduction}: In this section, we present an overview of the document's content and structure. We outline the problem at hand and articulate the goals that the system aims to achieve. The subsection on scope delves into a comprehensive description of various world and shared phenomena relevant to our subject matter. Additionally, essential information is provided to facilitate proper understanding, including definitions and abbreviations.
+    \item  \textbf{Overall Description}: This section offers a holistic description of the system. We provide insights into the system's architecture and functionality, accompanied by an outline of the users and their primary functionalities. Domain diagrams are introduced to illustrate key components, and various scenarios are detailed to enhance comprehension. Finally, we present the fundamental assumptions within the system's domain.
+    \item  \textbf{Specific Requirements}: In this section, we delve into the specific requirements of the system. Both functional and non-functional requirements are elucidated to provide a comprehensive understanding. Use case diagrams are included to visually represent system interactions, accompanied by detailed descriptions of each use case and related sequence diagrams. The section concludes with a mapping of requirements onto both overarching goals and individual use cases.
+    \item \textbf{Formal Analysis Using Alloy}:  Here, we conduct a formal analysis of the system using Alloy. This includes a rigorous examination of the system's specifications and constraints to ensure coherence and reliability.
+    \item \textbf{Effort Spent}: In this section, we provide an estimate of the effort invested by each member of the group. This allows for a transparent understanding of the distribution of work within the team.
+    \item  \textbf{References}: The document concludes with a comprehensive list of references used during the research and development phases. This section serves as a valuable resource for readers seeking additional information or verification of the document's content.
+\end{enumerate}
