--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -12,6 +12,11 @@
 \usepackage{pdfpages}
 \usepackage{listings}
 \usepackage{makeidx}
+\usepackage{graphicx}
+\usepackage{longtable}
+\usepackage{tabularx}
+\usepackage{enumitem}
+
 \makeindex
 % page layout and margin
 \usepackage[a4paper, margin=2.54cm]{geometry}
@@ -73,6 +78,6 @@
 
 \include{Section/Introduction}
 \include{Section/OverallDescription}
-
+\include{Section/SpecificRequirements}
 
 \end{document}
