--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -16,7 +16,7 @@
 \usepackage{longtable}
 \usepackage{tabularx}
 \usepackage{enumitem}
-
+\usepackage{alloy_language}
 \makeindex
 % page layout and margin
 \usepackage[a4paper, margin=2.54cm]{geometry}
@@ -79,5 +79,7 @@
 \include{Section/Introduction}
 \include{Section/OverallDescription}
 \include{Section/SpecificRequirements}
-
+\include{Section/Alloy}
+\include{Section/TimeSpent}
+\include{Section/References}
 \end{document}
